--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   -->
 </head>
 
-<link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="./css/style.css" />
 
 <body>
 
@@ -22,7 +22,7 @@
         <legend>Click a module to display the topics</legend>
 
         <table id="myTable">  
-            <img id="path" src="path.jpg" alt="Trulli" width="200" height="250">
+            <img id="path" src="./image/path.jpg" alt="Trulli" width="200" height="250">
             <br><br><br> 
             <tr>
                 <td id="r0c0">W1 Course Intro and DCA Access</td>
@@ -47,7 +47,7 @@
     </fieldset>
     <br>
 
-    <script src = "script.js"></script>
+    <script src = "./script/script.js"></script>
 
 </body>
 </html>
